Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.2.6:

* make intersecting ~ and =* atoms work again (used by pquery --revdep)

* catch a corner case py2.5 bug where AttributeError bleeds through from
  generic_equality.

* Via solars prodding, finished up the remaining bits for ROOT support.

* resolver traceback for if a requested atom is already known as insoluable.
  Thanks to kojiro for spotting it.

* misc bash code cleanup.

* PATH protection has been loosened slightly to enable 'weird' eclasses that
  are doing global PATH mangling.

* $HOME location for building was shifted into the targeted packages 
  directory, rather then a shared within $PORTAGE_TMPDIR.

* setgid/setuid triggers now match portage behaviour; -s,o-w mode change.

* trigger warnings are now enabled.

* New default trigger added; CommonDirectoryModes, checks for common
  directories (/usr, /etc, /usr/bin, /usr/lib for example) in the merge set,
  checking the packages specified modes for them.  If not 0755, throws a 
  warning.

* For directory on directory merging, ensure_perms (default op) was changed
  to preserve the existing directories permissions.  Generally speaking, this
  means that later versions of an ebuild have to use post_inst to correct the
  perms if they're incorrect- previously, the new perms/mode were forced on
  the existing.  Several common ebuilds (openssl for example) will generate
  weird modes on common directories however (heavily restricted perms), which
  can break things.  For the time being, the default is scaled down to the
  looser form portage does.

* added man page generation: pquery, pmerge

* pconfig now has a "dump-uncollapsed" command to dump the "raw" config.

* pebuild now supports --no-auto to run just the targeted phase.

* mass expansion of test coverage: pkgcore.restrictions.*,
  pkgcore.util.*, pkgcore.ebuild.*
